@@ -1,3 +1,4 @@
+* Use existing context for get_preferences
 * Add context to export URL
 
 Version 5.6.0 - 2020-05-04
